# RETRO 2020.10

Tooling

- added a `make image-js` target to generate the image.js
- fixed a bug in the glossary that caused names to appear twice
  (reported by Kiyoshi)
- fixed a bug in retro-describe due to use of a deprecated word
- allow setting the image size, stack sizes when building
- add Python implementations of retro-unu, retro-muri, retro-extend

Standard Library

- remove deprecated words

Unix

- added `script:current-file` to return the filename being processed
- added `script:current-line` to return the current line number being
  processed
- added `script:ignore-to-eol` to support commenting out lines when
  processing files
- added `script:abort-include` to support canceling rest of current
  file being processed
- added `//` to comment out lines (works with files and at the
  listener)
- deprecated words
  - sys:name (now script:name)
  - sys:argc (now script:arguments)
  - sys:argv (now script:get-argument)
- renamed
  - io:clock-operation (now clock:operation)
  - io:file-operation (now file:operation)
  - io:float-operation (now float:operation)
  - io:socket-operation (now socket:operation)

Python

- fixed a bug in the stack depth reporting (thanks to Scott McCallum for
  noticing this)
- fixed the `sh` instruction (which was totally broken prior to this, thanks
  to Scott for reporting this)

Documentation

- removed reference to old Makefile that no longer exists
- updates word namings for deprecated words that have been removed
