@@ -8,6 +8,7 @@ Tooling
 - fixed a bug in retro-describe due to use of a deprecated word
 - allow setting the image size, stack sizes when building
 - add Python implementations of retro-unu, retro-muri, retro-extend
+- add support for generating an epub from the documentation
 
 Standard Library
 
@@ -40,9 +41,9 @@ Python
   noticing this)
 - fixed the `sh` instruction (which was totally broken prior to this, thanks
   to Scott for reporting this)
+- retro.py now supports the floating point i/o device
 
 Documentation
 
 - removed reference to old Makefile that no longer exists
 - updates word namings for deprecated words that have been removed
-
